force-app/main/default/objects/HotelListing__c/HotelListing__c.object-meta.xml
<CustomObject>
    <label>HotelListing</label>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>