force-app/main/default/objects/HotelListing__c/fields/Addresses__c.field-meta.xml
<CustomField>
    <fullName>Addresses__c</fullName>
    <label>Addresses</label>
    <type>TextArea</type>
</CustomField>