force-app/main/default/objects/HotelListing__c/fields/Number_of_Person__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Person__c</fullName>
    <description>Number of Person</description>
    <label>Number of Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>