force-app/main/default/objects/HotelListing__c/fields/RatingStar__c.field-meta.xml
<CustomField>
    <fullName>RatingStar__c</fullName>
    <formula>IMAGE(
CASE(Rating__c ,
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;, 
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;),
&quot;rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RatingStar</label>
    <type>Text</type>
</CustomField>