force-app/main/default/objects/HotelListing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Check_In__c</columns>
    <columns>Check_Out__c</columns>
    <columns>Amenities__c</columns>
    <columns>Number_of_Person__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Price__c</columns>
    <columns>RatingStar__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>